@@ -5,6 +5,8 @@ aodh (3.0.0~rc1-3) UNRELEASED; urgency=medium
   * debian/source/options: ignores egg-info and .gitreview.
   * Fixed EPOCH for oslotest.
   * Build-Depends on openstack-pkg-tools >= 53~.
+  * Switch aodh-api to uwsgi-plugin-python, since eventlet support is gone
+    upstream.
 
   [ Ondřej Nový ]
   * d/control: Use correct branch in Vcs-* fields
